--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1035,13 +1035,20 @@ footer {
     text-decoration: none;
 }
 
+
 .footer-social-icons .icon i {
     font-size: 18px;
     color: #333;
     transition: all 0.3s ease;
     z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
-
 .footer-social-icons .icon::before {
     content: '';
     position: absolute;
